# mlx-d

./: README.md
mlx-d/: LICENSE  pyproject.toml
mlx-d/docs/: index.html
mlx-d/examples/: basic_generation.py  interactive_sampler.py  spec_decode_demo.py
mlx-d/mlx_d/: __init__.py  __main__.py  benchmark.py  config.py  convert.py  model.py  sampler.py  spec_decode.py  utils.py
mlx-d/tests/: test_config.py  test_sampler.py  test_schedule.py
